mini-app/infra/k8s/client-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          imagePullPolicy: Never
          image: miniapp/client

# usually we create separate file for different services,
# but here we can create a service in the same file...
---
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
#   type: ClusterIP
  selector:
    app: client
  ports:
  - name: client
    protocol: TCP
    port: 3000
    targetPort: 3000
