mini-app/infra/k8s/comments-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          imagePullPolicy: Never
          image: miniapp/comments

# usually we create separate file for different services,
# but here we can create a service in the same file...
---
apiVersion: v1
kind: Service
metadata:
  name: comments-service
spec:
#   type: ClusterIP
  selector:
    app: comments
  ports:
  - name: comments
    protocol: TCP
    port: 4001
    targetPort: 4001
