mini-app/infra/k8s/moderation-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          imagePullPolicy: Never
          image: miniapp/moderation

# usually we create separate file for different services,
# but here we can create a service in the same file...
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-service
spec:
#   type: ClusterIP
  selector:
    app: moderation
  ports:
  - name: moderation
    protocol: TCP
    port: 4003
    targetPort: 4003
