mini-app/infra/k8s/postsnodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-nodeport
spec:
  type: NodePort
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
