mini-app/infra/k8s/query-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          imagePullPolicy: Never
          image: miniapp/query

# usually we create separate file for different services,
# but here we can create a service in the same file...
---
apiVersion: v1
kind: Service
metadata:
  name: query-service
spec:
#   type: ClusterIP
  selector:
    app: query
  ports:
  - name: query
    protocol: TCP
    port: 4002
    targetPort: 4002
